test/parse/strict/good/true.cnf
c this is an empty CNF
p cnf 0 0
