test/parse/strict/bad/commentinbody.cnf
comment is fine
p cnf 0 0
comment is not good
